# polarity

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  hexlet-check.yml  python-ci.yml
diffepy/: __init__.py
diffepy/api/: constants.py  gendiff.py  make_diff.py
diffepy/scripts/: cli.py
diffepy/utils/: json.py  plain.py  stylish.py
gendiff/: __init__.py  cli.py  constants.py  gen_diff.py  gendiff.py  generate_diff.py  make_diff.py  parser.py  stylish.py
gendiff/api/: gendiff.py  make_diff.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  cli.py  gendiff.py
gendiff/utils/: __init__.py  gen_diff.py  generate_diff.py  parser.py  stylish.py
hexlet_code/scripts/: gendiff.py
polarity/: __init__.py  __main__.py
polarity/api/: __init__.py  constants.py  difference.py  gendiff.py  make_diff.py  parser.py
polarity/scripts/: cli.py
polarity/utils/: json.py  plain.py  stylish.py
testes/: test_gendiff.py  test_gendiff_type.py
tests/: test_gendiff.py  test_generate_diff.py  test_json_gendiff.py  test_main.py  test_polarity.py  test_yaml_gendiff.py
tests/fixtures/: result_json.txt  result_json_dict_formatting.txt  test_tree1.json  test_tree2.json
