[tool.poetry]
name = "hexlet-code"
version = "0.1.4"
description = ""
authors = ["notabu <samyyklass@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
pytest = "^6.2.4"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
test_gendiff = "testes.test_gendiff:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
