[tool.poetry]
name = "hexlet-code"
version = "0.1.5"
description = ""
authors = ["notabu <samyyklass@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.cli:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
