[tool.poetry]
name = "polarity"
version = "0.1.7"
description = ""
authors = ["znhv <znhv@yandex.com>"]
packages = [
  { include = "polarity" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
pytest-sugar = "^0.9.4"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"

[tool.poetry.scripts]
polarity = "polarity.scripts.cli:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
